--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -1,8 +1,9 @@
-FROM nixos/nix
+FROM nixos/nix as NIXBASE
 ARG packages
-RUN mkdir -p /output/store
-RUN nix-env --profile /output/profile -iA ${packages}
-RUN cp -va $(nix-store -qR /output/profile) /output/store
+RUN mkdir -p /output/store && \
+    nix-env --profile /output/profile -iA ${packages} && \
+    cp -va $(nix-store -qR /output/profile) /output/store
+
 FROM scratch
-COPY --from=0 /output/store /nix/store
-COPY --from=0 /output/profile/ /usr/local/
+COPY --from=NIXBASE /output/store /nix/store
+COPY --from=NIXBASE /output/profile/ /usr/local/
