--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -65,6 +65,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
+          load: true
           context: .
           file: ${{ matrix.runtime }}/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
