--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -95,6 +95,7 @@ jobs:
           cosign-release: 'v1.0.0' # optional
       - name: Sign image
           run: |
+            echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
             cosign sign -key my_cosign.key ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}${{ matrix.runtime }}:${{ matrix.tag }}
 #      - name: Run Trivy vulnerability scanner
 #        uses: aquasecurity/trivy-action@master
